fixed featured screencast info icon alignment

--- a/source/client/scss/components/_main.scss
+++ b/source/client/scss/components/_main.scss
@@ -111,6 +111,9 @@
       margin-right: 16px;
       position: relative;
     }
+    &__info {
+      width: 100%;
+    }
     &__duration {
       background-color: goldenrod;
       position: absolute;
